fix: bug in navigation bar mobile screen overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: linear-gradient(280deg, rgb(5, 5, 5) 0%, rgba(9, 19, 14, 0.98) 80%, rgb(5, 5, 5) 100%);
+  --background: linear-gradient(0deg, rgba(3, 6, 5, 0.98) 0%,rgba(6, 10, 9, 0.98) 80%, rgba(1, 12, 7, 0.98) 100%);
   --background-card: linear-gradient(35deg, rgba(32, 32, 32, 1) 0%, rgba(31, 31, 31, 1) 100%);
 
   --foreground: #E1E1E1;
   --color-text-secondary: #D0D0D0;
   --color-text-gray: #8a8a8a;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 body {
